# FruitRecognition

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FruitRecognition.cbp  ImageReader.cpp  ImageReader.h  Makefile  README.md  cmake_install.cmake  main.cpp
feature-extraction/: Color.cpp  Color.h  PrincipalComponentAnalysis.cpp  PrincipalComponentAnalysis.h  Shape.cpp  Shape.h  Texture.cpp  Texture.h
pca/: PrincipalComponentAnalysis.cpp  PrincipalComponentAnalysis.h
segmentation/: Quadtree.cpp  Quadtree.h
